--- a/config.example.json
+++ b/config.example.json
@@ -1,29 +1,19 @@
 {
-  // === CONFIGURATION FILE FOR regitra watcher v2===
-  // This file contains credentials, request parameters, and runtime settings.
-  // DO NOT commit real credentials to version control!
-  // Replace placeholder values before running.
-  // For interval I recommend to use something like 3900 cause Regitra throw out slots every hour -/+
-
   "credentials": {
-    // Swedbank BankID login credentials
-    "login": "YOUR_SWEDBANK_LOGIN",         // e.g. usernameID
-    "asmens_kodas": "YOUR_PERSONAL_CODE"    // Lithuanian personal ID code
+    "login": "YOUR_SWEDBANK_LOGIN",
+    "asmens_kodas": "YOUR_PERSONAL_CODE"
   },
-
   "request": {
-    // Request-specific parameters
-    "prasymo_nr": "12345678",               // Application number (Prašymo Nr.)
-    "deadline": "2025-09-01",               // Latest acceptable date (YYYY-MM-DD)
-    "vehicle_type": "regitra",              // "regitra" or "nuosava" (Regitra or personal vehicle)
-    "notify_only": false                    // true = only notify, false = auto-book
+    "prasymo_nr": "12345678",
+    "deadline": "2025-09-01",
+    "vehicle_type": "regitra",
+    "notify_only": false
   },
-
   "settings": {
-    // Runtime behavior
-    "headless": true,                       // Run browser in headless mode
-    "debug": false,                         // Enable debug logging and visual browser
-    "check_interval_sec": 60,               // Interval between checks (in seconds)
-    "timeout_sec": 30                       // Timeout for page loads and waits
+    "headless": true,
+    "debug": false,
+    "check_interval_sec": 60,
+    "timeout_sec": 30,
+    "captchaapikey": "PASTEYOURKEYHERE"
   }
 }
