--- a/config.example.json
+++ b/config.example.json
@@ -14,6 +14,7 @@
     "debug": false,
     "check_interval_sec": 60,
     "timeout_sec": 30,
+    "keep_alive_interval_sec": 30,
     "captchaapikey": "PASTEYOURKEYHERE",
     "retry_on_fail": true,
     "retry_on_success": true
