--- a/config.example.json
+++ b/config.example.json
@@ -15,6 +15,7 @@
     "check_interval_sec": 60,
     "timeout_sec": 30,
     "keep_alive_interval_sec": 30,
+    "captcha_max_wait_sec": 240,
     "captchaapikey": "PASTEYOURKEYHERE",
     "retry_on_fail": true,
     "retry_on_success": true
